[gd_scene load_steps=8 format=3 uid="uid://cm6aqijuc5f8t"]

[ext_resource type="PackedScene" uid="uid://dcxp8xufmfab8" path="res://scenes/language_selection/language_buttons/language_button_fr/language_button_fr.tscn" id="1_5r684"]
[ext_resource type="Script" uid="uid://ccxatpeeptoqt" path="res://scenes/language_selection/first_time_language_selection/first_time_language_selection.gd" id="1_xi5un"]
[ext_resource type="PackedScene" uid="uid://bn3nhhy3oavfx" path="res://scenes/language_selection/language_buttons/language_button_pl/language_button_pl.tscn" id="2_xgub0"]
[ext_resource type="PackedScene" uid="uid://3lomrkxmxwi2" path="res://scenes/language_selection/language_buttons/language_button_pt/language_button_pt.tscn" id="3_e07qo"]
[ext_resource type="PackedScene" uid="uid://d1flyjv0cwjvo" path="res://scenes/language_selection/language_buttons/language_button_zh/language_button_zh.tscn" id="4_hccpw"]
[ext_resource type="PackedScene" uid="uid://bhm1eo4ya0rwi" path="res://scenes/language_selection/language_buttons/language_button_ru/language_button_ru.tscn" id="4_hu3iq"]
[ext_resource type="PackedScene" uid="uid://bfomibdox8gt6" path="res://scenes/language_selection/language_buttons/language_button_en/language_button_en.tscn" id="5_vtfv6"]

[node name="FirstTimeLanguageSelection" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_xi5un")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 128

[node name="VBoxContainer1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="LanguageButtonFr" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer1" instance=ExtResource("1_5r684")]
unique_name_in_owner = true
layout_mode = 2

[node name="LanguageButtonPl" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer1" instance=ExtResource("2_xgub0")]
unique_name_in_owner = true
layout_mode = 2

[node name="LanguageButtonRu" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer1" instance=ExtResource("4_hu3iq")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="LanguageButtonPt" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("3_e07qo")]
unique_name_in_owner = true
layout_mode = 2

[node name="LanguageButtonZh" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("4_hccpw")]
unique_name_in_owner = true
layout_mode = 2

[node name="LanguageButtonEn" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("5_vtfv6")]
unique_name_in_owner = true
layout_mode = 2
